--- a/404.html
+++ b/404.html
@@ -88,7 +88,7 @@
    --><!--
      --><li><a href="/archives/">Writing</a></li><!--
    --><!--
-     --><li><a target="_blank" rel="noopener" href="https://github.com/superboy-zjc">Projects</a></li><!--
+     --><li><a href="/project/">Projects</a></li><!--
    -->
     </ul>
   </div>
@@ -124,7 +124,7 @@
      --><!--
        --><li><a href="/archives/">Writing</a></li><!--
      --><!--
-       --><li><a target="_blank" rel="noopener" href="https://github.com/superboy-zjc">Projects</a></li><!--
+       --><li><a href="/project/">Projects</a></li><!--
      -->
       </ul>
     </nav>
